# jade

./: '  Cargo.toml  LICENSE.md  README.md  config.toml
src/: app.rs  info.rs  jade.rs  keyhandling.rs  main.rs  musicplayer.rs  queue.rs  render.rs  run.rs  song_information.rs
src/render/: generate_list.rs  info.rs  info_area.rs  mod.rs  music.rs  music_area.rs  player_area.rs  queue.rs  queue_area.rs  render.rs
src/song_information/: get_song_info.rs  mod.rs
src/threads/: info.rs  mod.rs  musicplayer.rs  queue.rs
