[package]
name = "Jade"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = {version = "0.30.0-alpha.5", features=["default"]}
ratatui-image = "8.0.1"
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
rodio = "0.21.1"
log = "0.4.27"

[profile.dev]
opt-level = 1
incremental = true

[build]
rustc-wrapper = "sccache"
