[package]
name = "Jade"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.30.0-alpha.5", features = ["default"] }
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
rodio = "0.21.1"
unicode-width = "0.2.0"
symphonia = { version = "0.5.4", features = ["mp3", "flac", "vorbis"] }
crossbeam-channel = "0.5.15"

[profile.dev]
opt-level = 1
incremental = true
